--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Gallery</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+<body>
+    <h3>images : ) </h3>
+
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+
+
+
+    </div>
+</body>
+
+<script>
+// JS functions 
+
+
+// open image
+
+
+// close image 
+
+
+// next image 
+
+
+// previous image 
+
+
+// 
+
+
+</script>
+</html>
+
 
