--- a/index.html
+++ b/index.html
@@ -4,15 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
+    <script src="https://kit.fontawesome.com/0d30c02dfc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
     <h3>images : ) </h3>
 
-    <div class="container">
+    <div id="image-display">
+            <div id="x">X</div>
+
+            <div class="container">
+                <div class="row">
+                    <button id="previous"> <i class="fas fa-arrow-left"></i></button>
+                    <div id="show-img"></div>
+                    <button id="next"> <i class="fas fa-arrow-right"></i></button> 
+
+                </div>
+            </div>
+
+
+    </div>
+<br><br><br><br><br><br><br>
+
+    <div class="container-lg" id="image-list">
+
+        <!-- row one -->
         <div class="row">
-            <div class="col"></div>
+            <div class="col">
+                <img src="" alt="img1">
+
+            </div>
+            <div class="col">
+                <img src="" alt="img2">
+
+
+
+            </div>
+            <div class="col">
+                <img src="" alt="img3">
+
+
+            </div>
+            <div class="col">
+                <img src="" alt="img4">
+
+            </div>
         </div>
+<!-- row two -->
+<div class="row">
+    <div class="col">
+        <img src="" alt="img1">
+
+    </div>
+    <div class="col">
+        <img src="" alt="img2">
+
+
+    </div>
+    <div class="col">
+        <img src="" alt="img3">
+
+
+    </div>
+    <div class="col">
+        <img src="" alt="img4">
+
+
+    </div>
+</div>
+
+ <!-- row three  -->
+ <div class="row">
+    <div class="col">
+        <img src="" alt="img1">
+    </div>
+    <div class="col">
+        <img src="" alt="img2">
+
+    </div>
+    <div class="col">
+        <img src="" alt="img3">
+
+    </div>
+    <div class="col">
+        <img src="" alt="img4">
+
+    </div>
+</div>
+
+<!-- row four -->
+<div class="row">
+    <div class="col">
+        <img src="" alt="img1">
+    </div>
+    <div class="col">
+        <img src="" alt="img2">
+
+    </div>
+    <div class="col">
+        <img src="" alt="img3">
+
+    </div>
+    <div class="col">
+        <img src="" alt="img4">
+    </div>
+</div>
 
 
 
@@ -22,20 +119,64 @@
 <script>
 // JS functions 
 
-
 // open image
+var smallImages = document.getElementsByClassName("col"); 
 
+var display;
+var currentImage = 0;
+
+for (var i=0; i<smallImages.length; i++) {
+    display = i
+    smallImages[i].addEventListener("click", 
+        openImage.bind(this, display), false);
+}
+
+function openImage(display){
+//     console.log("doin i1")
+    console.log(display);
+    currentImage = display;
+    document.getElementById("show-img").innerHTML = smallImages[display].innerHTML
+    document.getElementById("image-display").style.display = "block";
+}
 
 // close image 
+var xButton = document.getElementById("x");
 
+xButton.addEventListener("click", closeImage, false);
+
+function closeImage(){
+    document.getElementById("image-display").style.display = "none";
+}
 
 // next image 
+document.getElementById("next").addEventListener("click", nextImage, false)
+
+function nextImage(){
+    if (currentImage < 15) {
+        currentImage +=1; 
+        openImage(currentImage)
+    }
+}
 
 
 // previous image 
+document.getElementById("previous").addEventListener("click", previousImage, false)
+
+function previousImage(){
+    if (currentImage > 0) {
+        currentImage -=1; 
+        openImage(currentImage)
+    }
+}
 
 
-// 
+//mouse hover over images 
+
+
+//mouse hover over X button
+
+
+
 
 
 </script>
