--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <h3>images : ) </h3>
+    <br><br>
+    <h3>Places I want to go</h3>
 
     <div id="image-display">
             <div id="x">X</div>
@@ -25,50 +26,50 @@
 
 
     </div>
-<br><br><br><br><br><br><br>
+<br><br><br>
 
     <div class="container-lg" id="image-list">
 
         <!-- row one -->
         <div class="row">
-            <div class="col">
-                <img src="" alt="img1">
+            <div class="col" id="col1">
+                <img class="small-img" src="im1.jpg" alt="img1">
 
             </div>
             <div class="col">
-                <img src="" alt="img2">
+                <img class="small-img" src="im2.jpg" alt="img2">
 
-
-
-            </div>
-            <div class="col">
-                <img src="" alt="img3">
 
 
             </div>
             <div class="col">
-                <img src="" alt="img4">
+                <img class="small-img" src="im3.jpg" alt="img3">
+
+
+            </div>
+            <div class="col">
+                <img class="small-img" src="im4.jpg" alt="img4">
 
             </div>
         </div>
 <!-- row two -->
 <div class="row">
     <div class="col">
-        <img src="" alt="img5">
+        <img class="small-img" src="im5.jpg" alt="img5">
 
     </div>
     <div class="col">
-        <img src="" alt="img6">
-
-
-    </div>
-    <div class="col">
-        <img src="" alt="img7">
+        <img class="small-img" src="im6.jpg" alt="img6">
 
 
     </div>
     <div class="col">
-        <img src="" alt="img8">
+        <img class="small-img" src="im7.jpg" alt="img7">
+
+
+    </div>
+    <div class="col">
+        <img class="small-img" src="im8.jpg" alt="img8">
 
 
     </div>
@@ -77,18 +78,18 @@
  <!-- row three  -->
  <div class="row">
     <div class="col">
-        <img src="" alt="img9">
+        <img class="small-img" src="im9.jpg" alt="img9">
     </div>
     <div class="col">
-        <img src="" alt="img10">
+        <img class="small-img" src="im10.jpg" alt="img10">
 
     </div>
     <div class="col">
-        <img src="" alt="img11">
+        <img class="small-img" src="im11.jpg" alt="img11">
 
     </div>
     <div class="col">
-        <img src="" alt="img12">
+        <img class="small-img" src="im12.jpg" alt="img12">
 
     </div>
 </div>
@@ -96,18 +97,18 @@
 <!-- row four -->
 <div class="row">
     <div class="col">
-        <img src="" alt="img13">
+        <img class="small-img" src="im13.jpg" alt="img13">
     </div>
     <div class="col">
-        <img src="" alt="img14">
+        <img class="small-img" src="im14.png" alt="img14">
 
     </div>
     <div class="col">
-        <img src="" alt="img15">
+        <img class="small-img" src="im15.jpg" alt="img15">
 
     </div>
     <div class="col">
-        <img src="" alt="img16">
+        <img class="small-img" src="im16.jpg" alt="img16">
     </div>
 </div>
 
@@ -171,9 +172,47 @@ function previousImage(){
 
 
 //mouse hover over images 
+// make bigger, add shadow , make cursor 
+var hoverImages = document.getElementsByClassName("small-img")
+var imageToSelect; 
 
+for (var j=0; j<hoverImages.length; j++){
+    imageToSelect = hoverImages[j]
+    hoverImages[j].addEventListener("mouseover", mouseHover.bind(this, imageToSelect), false);
+    hoverImages[j].addEventListener("mouseout", mouseGone.bind(this, imageToSelect), false);
+    hoverImages[j].addEventListener("click", noBorder.bind(this, imageToSelect), false);
+
+}
+
+function mouseHover(imageName){
+    imageName.style.boxShadow = "15px 15px 15px 15px lightgrey"
+    imageName.style.cursor = "pointer"
+    imageName.style.transition = ".7s ease-in-out"
+    imageName.style.transform = "scale(1.1)"
+
+
+//     .grow { transition: all .2s ease-in-out; }
+// .grow:hover { transform: scale(1.1); }
+
+    //   box-shadow: 5px 10px 18px red;
+
+}
+
+function mouseGone(imageName){
+    imageName.style.boxShadow = "0px 0px 0px 0px"
+    imageName.style.transition = ".7s ease-in-out"
+    imageName.style.transform = "scale(1)"
+}
+
+function noBorder(imageName){
+    imageName.style.boxShadow = "0px 0px 0px 0px"
+    imageName.style.transform = "scale(1)"    
+
+}
 
 //mouse hover over X button
+// make cursor 
+document.getElementById("x").style.cursor = "pointer";
 
 
 
